--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio page</title>
+    <link rel="stylesheet" href="./resources/css/index.css" >
+</head>
 <body>
-  <h1>Spencer</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+  <header class="header">
+    <h1>Spencer Freeman's Portfolio</h1>
+    <h3>more projects to come</h3>
+  </header>
+  <main>
+    <h4>Here's a list of my current and completed projects</h4>
+    <ul>
+        <li>Portfolio page</li>
+        <li>Search string project</li>
+        <li>more to come!</li>
+    </ul>
+  </main>
+  <footer class="footer">
+    <h3>Here are some fun photos from my time in Kenya</h3>
+    <img src="./resources/images/mt_photo.jpg"><img src="./resources/images/eg_goose.jpg">
+    <img src="./resources/images/zebras.jpg">
+  </footer>
 
+</body>
 </html>
