--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </main>
   <footer class="footer">
     <h3>Here are some fun photos from my time in Kenya</h3>
-    <img src="./resources/images/mt_photo.jpg"><img src="./resources/images/eg_goose.jpg">
-    <img src="./resources/images/zebras.jpg">
+    <img src="mt_photo.jpg"><img src="eg_goose.jpg">
+    <img src="zebras.jpg">
   </footer>
 
 </body>
